# CSC417Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2D.py  utils.py
include/: Grid3D.h  LinkedList.h  Particle.h  Spring.h  constants.h  utils.h
src/: utils.cpp
